Resolviendo fuzzy de 'howto' y nuevas traducciones

--- a/howto/logging.po
+++ b/howto/logging.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-29 17:19-0700\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-04 17:38+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_US\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/howto/logging.rst:3
 msgid "Logging HOWTO"
@@ -442,13 +443,13 @@ msgid ""
 "options *are* supported, but exploring them is outside the scope of this "
 "tutorial: see :ref:`formatting-styles` for more information."
 msgstr ""
-"Como puedes ver, la fusión de datos de variables en el mensaje de "
-"descripción de eventos utiliza el viejo estilo % de formato de cadena de "
-"caracteres. Esto es para compatibilidad retrospectiva : el paquete de "
-"registro precede las nuevas opciones de formato como :meth:`str.format` y :"
-"class:`string.Template`. Estas nuevas opciones de formato *son* compatibles, "
-"pero explorarlas está fuera del alcance de este tutorial: ver :ref:"
-"`formatting-styles` para más información."
+"Como puede ver, la fusión de datos variables en el mensaje de descripción "
+"del evento utiliza el antiguo estilo % de formato de cadena. Esto es por "
+"compatibilidad con versiones anteriores: el paquete de registro es anterior "
+"a opciones de formato más nuevas, como :meth:`str.format` y :class:`string."
+"Template`. Estas nuevas opciones de formato *son* compatibles, pero "
+"explorarlas está fuera del alcance de este tutorial: consulte :ref:"
+"`formatting-styles` para obtener más información."
 
 #: ../Doc/howto/logging.rst:265
 msgid "Changing the format of displayed messages"
@@ -1777,7 +1778,7 @@ msgid ""
 "class:`Formatter` class. They are initialized with a format string suitable "
 "for use with the % operator and a dictionary."
 msgstr ""
-"Los mensajes registrados son formateados para su presentación a través de "
+"Los mensajes registrados se formatean para su presentación a través de "
 "instancias de la clase :class:`Formatter`. Se inicializan con una cadena de "
 "formato adecuada para su uso con el operador % y un diccionario."
 
@@ -1976,16 +1977,14 @@ msgid "Information about where calls were made from."
 msgstr "Información sobre dónde se hicieron las llamadas."
 
 #: ../Doc/howto/logging.rst:1084
-#, fuzzy
 msgid ""
 "Set ``logging._srcfile`` to ``None``. This avoids calling :func:`sys."
 "_getframe`, which may help to speed up your code in environments like PyPy "
 "(which can't speed up code that uses :func:`sys._getframe`)."
 msgstr ""
-"Ponga ``logging._srcfile`` a ``None``. Esto evita llamar a :func:`sys."
-"_getframe`, lo que puede ayudar a acelerar tu código en entornos como PyPy "
-"(cual no puede acelerar el código que usa :func:`sys._getframe`), siempre y "
-"cuando PyPy soporte Python 3.x."
+"Establezca ``logging._srcfile`` en ``None``. Esto evita llamar a :func:`sys."
+"_getframe`, que puede ayudar a acelerar su código en entornos como PyPy (que "
+"no puede acelerar el código que usa :func:`sys._getframe`)."
 
 #: ../Doc/howto/logging.rst:1091
 msgid "Threading information."
