--- a/howto/sorting.po
+++ b/howto/sorting.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 20:29-0300\n"
-"Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
+"PO-Revision-Date: 2021-08-04 17:32+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/howto/sorting.rst:4
 msgid "Sorting HOW TO"
@@ -96,15 +97,14 @@ msgid "Key Functions"
 msgstr "Funciones clave"
 
 #: ../Doc/howto/sorting.rst:45
-#, fuzzy
 msgid ""
 "Both :meth:`list.sort` and :func:`sorted` have a *key* parameter to specify "
 "a function (or other callable) to be called on each list element prior to "
 "making comparisons."
 msgstr ""
-"Ambos :meth:`list.sort` y :func:`sorted` tienen un parámetro *clave* para "
-"especificar una función que se llamará en cada elemento de la lista antes de "
-"hacer comparaciones."
+"Ambos :meth:`list.sort` y :func:`sorted` tienen un parámetro *key* para "
+"especificar una función (u otra invocable) que se llamará en cada elemento "
+"de la lista antes de hacer comparaciones."
 
 #: ../Doc/howto/sorting.rst:49
 msgid "For example, here's a case-insensitive string comparison:"
@@ -113,17 +113,16 @@ msgstr ""
 "mayúsculas y minúsculas:"
 
 #: ../Doc/howto/sorting.rst:54
-#, fuzzy
 msgid ""
 "The value of the *key* parameter should be a function (or other callable) "
 "that takes a single argument and returns a key to use for sorting purposes. "
 "This technique is fast because the key function is called exactly once for "
 "each input record."
 msgstr ""
-"El valor del parámetro *key* debe ser una función que tome un solo argumento "
-"y retorne una clave para usar con fines de clasificación. Esta técnica es "
-"rápida porque la función *key* se llama exactamente una vez para cada "
-"registro de entrada."
+"El valor del parámetro *key* debe ser una función (u otra invocable) que "
+"tome un solo argumento y devuelva una clave para usar con fines de "
+"clasificación. Esta técnica es rápida porque la función de la tecla se llama "
+"exactamente una vez para cada registro de entrada."
 
 #: ../Doc/howto/sorting.rst:59
 msgid ""
@@ -346,10 +345,7 @@ msgstr ""
 "esto, todas las versiones de Py2.x admiten el parámetro *cmp* para manejar "
 "la función de comparación especificada por el usuario."
 
-# "rich comparisons" -> comparaciones enriquecidas? o es un concepto
-# específico?
 #: ../Doc/howto/sorting.rst:214
-#, fuzzy
 msgid ""
 "In Py3.0, the *cmp* parameter was removed entirely (as part of a larger "
 "effort to simplify and unify the language, eliminating the conflict between "
@@ -426,15 +422,15 @@ msgstr ""
 "incorporada :func:`reversed` dos veces:"
 
 #: ../Doc/howto/sorting.rst:290
-#, fuzzy
 msgid ""
 "The sort routines are guaranteed to use :meth:`__lt__` when making "
 "comparisons between two objects. So, it is easy to add a standard sort order "
 "to a class by defining an :meth:`__lt__` method::"
 msgstr ""
-"Se garantiza el uso de las rutinas de clasificación :meth:`__lt__` al hacer "
-"comparaciones entre dos objetos. Por lo tanto, es fácil agregar un orden de "
-"clasificación estándar a una clase definiendo un método :meth:`__lt__` ::"
+"Las rutinas de ordenación están garantizadas para usar :meth:`__lt__` al "
+"hacer comparaciones entre dos objetos. Por lo tanto, es fácil agregar un "
+"orden de clasificación estándar a una clase definiendo un método :meth:"
+"`__lt__` ::"
 
 #: ../Doc/howto/sorting.rst:298
 msgid ""
