--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-30 20:13-0300\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-04 17:27+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_AR\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/howto/urllib2.rst:5
 msgid "HOWTO Fetch Internet Resources Using The urllib Package"
@@ -177,7 +178,6 @@ msgstr ""
 "FTP de la siguiente manera::"
 
 #: ../Doc/howto/urllib2.rst:98
-#, fuzzy
 msgid ""
 "In the case of HTTP, there are two extra things that Request objects allow "
 "you to do: First, you can pass data to be sent to the server.  Second, you "
@@ -185,11 +185,11 @@ msgid ""
 "request itself, to the server - this information is sent as HTTP \"headers"
 "\".  Let's look at each of these in turn."
 msgstr ""
-"En el caso del HTTP, hay dos cosas extra que los objetos Request permiten "
-"hacer: Primero, puedes pasar datos que serán enviados al servidor.  Segundo, "
-"puedes pasar información extra (\"metadatos\") *sobre* los datos o sobre la "
-"propia petición, al servidor - esta información se envía como \"encabezado\" "
-"HTTP.  Veamos cada uno de estos a su vez."
+"En el caso de HTTP, hay dos cosas adicionales que los objetos Request le "
+"permiten hacer: Primero, puede pasar datos para enviarlos al servidor. En "
+"segundo lugar, puede pasar información adicional (\"metadatos\") *about* los "
+"datos o sobre la solicitud en sí, al servidor; esta información se envía "
+"como \"encabezados\" HTTP. Veamos cada uno de estos por turno."
 
 #: ../Doc/howto/urllib2.rst:105
 msgid "Data"
