--- a/howto/argparse.po
+++ b/howto/argparse.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2020-05-09 18:32-0300\n"
+"PO-Revision-Date: 2021-08-04 20:34+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: \n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/howto/argparse.rst:3
 msgid "Argparse Tutorial"
@@ -203,17 +203,16 @@ msgstr ""
 "especificadas, en este caso, ``echo``."
 
 #: ../Doc/howto/argparse.rst:149
-#, fuzzy
 msgid ""
 "The variable is some form of 'magic' that :mod:`argparse` performs for free "
 "(i.e. no need to specify which variable that value is stored in). You will "
 "also notice that its name matches the string argument given to the method, "
 "``echo``."
 msgstr ""
-"La variable es alguna forma de 'magia' que :mod:`argparse` realiza gratis "
-"(es decir, no hay necesidad de especificar en que variable el valor es "
-"almacenado). También notará que su nombre coincida con el argumento de "
-"cadena dado al método, ``echo``."
+"La variable es una forma de 'magia' que :mod:`argparse` se realiza de forma "
+"gratuita (es decir, no es necesario especificar en qué variable se almacena "
+"ese valor). También notará que su nombre coincide con el argumento de cadena "
+"dado al método, ``echo``."
 
 #: ../Doc/howto/argparse.rst:154
 msgid ""
@@ -233,11 +232,9 @@ msgstr ""
 msgid "And we get:"
 msgstr "Y la salida:"
 
-# No entiendo muy bien la frase en inglés, para mí es una pregunta eso, pero no estoy seguro. La frase en Español no me suena bien a mí.
 #: ../Doc/howto/argparse.rst:178
-#, fuzzy
 msgid "Now, how about doing something even more useful::"
-msgstr "Ahora, cómo hacemos algo aún más útil::"
+msgstr "Ahora, que tal si hacemos algo más útil::"
 
 #: ../Doc/howto/argparse.rst:196
 msgid ""
@@ -334,15 +331,13 @@ msgstr ""
 "especificada, se asigna el valor ``True`` a :data:`args.verbose`. No "
 "especificarlo implica ``False``."
 
-# Revisar en otros textos que he visto que se ha usado *flag* diréctamente, en vez de bandera. Si decide cambiar, tener en cuenta que hay varios usos de bandera en este archivo.
 #: ../Doc/howto/argparse.rst:305
-#, fuzzy
 msgid ""
 "It complains when you specify a value, in true spirit of what flags actually "
 "are."
 msgstr ""
 "Se queja cuando se especifica un valor, en verdadero espíritu de lo que "
-"realmente son las banderas."
+"realmente son los flags."
 
 #: ../Doc/howto/argparse.rst:308
 msgid "Notice the different help text."
