--- a/howto/instrumentation.po
+++ b/howto/instrumentation.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-10-09 13:37-0300\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-04 17:42+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/howto/instrumentation.rst:7
 msgid "Instrumenting CPython with DTrace and SystemTap"
@@ -393,17 +394,16 @@ msgstr ""
 "Python. Solo se activa para funciones de Python puro (código de bytes)."
 
 #: ../Doc/howto/instrumentation.rst:383
-#, fuzzy
 msgid ""
 "This probe point is the converse of ``python.function.return``, and "
 "indicates that execution of a Python function has ended (either via "
 "``return``, or via an exception).  It is only triggered for pure-Python "
 "(bytecode) functions."
 msgstr ""
-"Este punto de sonda es el inverso de :c:func:`python.function.return` e "
-"indica que la ejecución de una función de Python ha finalizado (ya sea "
-"mediante ``return`` o mediante una excepción). Solo se activa para funciones "
-"de Python puro (código de bytes)."
+"Este punto de prueba es el inverso de ``python.function.return``, e indica "
+"que la ejecución de una función de Python ha finalizado (ya sea mediante "
+"``return`` o mediante una excepción). Solo se activa para funciones de "
+"Python puro (código de bytes)."
 
 #: ../Doc/howto/instrumentation.rst:390
 msgid "Examples"
