--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-08-03 11:36+0200\n"
+"PO-Revision-Date: 2021-08-04 20:41+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -317,9 +317,7 @@ msgstr ""
 msgid "which, when run, will produce:"
 msgstr "que, cuando se ejecuta, producirá:"
 
-# Está OK traducir "listener" por "oyente"??
 #: ../Doc/howto/logging-cookbook.rst:394
-#, fuzzy
 msgid ""
 "Prior to Python 3.5, the :class:`QueueListener` always passed every message "
 "received from the queue to every handler it was initialized with. (This was "
@@ -331,30 +329,28 @@ msgid ""
 "handler if it's appropriate to do so."
 msgstr ""
 "Antes de Python 3.5, :class:`QueueListener` siempre pasaba cada mensaje "
-"recibido de la cola a cada gestor con el que se inicializaba. (Esto se debió "
-"a que se asumió que el filtrado de nivel se realizó en el otro lado, donde "
-"se llena la cola). A partir de 3.5, este comportamiento se puede cambiar "
-"pasando un argumento de palabra clave ``respect_handler_level=True`` al "
-"constructor del oyente . Cuando se hace esto, el oyente compara el nivel de "
-"cada mensaje con el nivel del controlador, y solo pasa un mensaje a un "
+"recibido de la cola a cada controlador con el que se inicializaba. (Esto se "
+"debió a que se asumió que el filtrado de nivel se realizó en el otro lado, "
+"donde se llena la cola). A partir de 3.5, este comportamiento se puede "
+"cambiar pasando un argumento de palabra clave ``respect_handler_level=True`` "
+"al constructor del oyente . Cuando se hace esto, el oyente compara el nivel "
+"de cada mensaje con el nivel del controlador y solo pasa un mensaje a un "
 "controlador si es apropiado hacerlo."
 
 #: ../Doc/howto/logging-cookbook.rst:407
 msgid "Sending and receiving logging events across a network"
 msgstr "Enviar y recibir eventos logging a través de una red"
 
-# tengo dudas con "extremo final del envío"
 #: ../Doc/howto/logging-cookbook.rst:409
-#, fuzzy
 msgid ""
 "Let's say you want to send logging events across a network, and handle them "
 "at the receiving end. A simple way of doing this is attaching a :class:"
 "`SocketHandler` instance to the root logger at the sending end::"
 msgstr ""
-"Supongamos que desea enviar eventos logging a través de una red y "
-"gestionarlos en el extremo receptor. Una forma sencilla de hacer esto es "
-"adjuntar una instancia de :class:`SocketHandler` al logger raíz en el "
-"extremo final del envío::"
+"Supongamos que desea enviar eventos de registro a través de una red y "
+"manejarlos en el extremo receptor. Una forma sencilla de hacer esto es "
+"adjuntar una instancia de :class:`SocketHandler` al registrador raíz en el "
+"extremo de envío::"
 
 #: ../Doc/howto/logging-cookbook.rst:437
 msgid ""
@@ -445,7 +441,6 @@ msgstr ""
 "que puede usar los dos tipos de instancias indistintamente."
 
 #: ../Doc/howto/logging-cookbook.rst:574
-#, fuzzy
 msgid ""
 "When you create an instance of :class:`LoggerAdapter`, you pass it a :class:"
 "`Logger` instance and a dict-like object which contains your contextual "
@@ -455,13 +450,13 @@ msgid ""
 "contextual information in the delegated call. Here's a snippet from the code "
 "of :class:`LoggerAdapter`::"
 msgstr ""
-"Cuando creas una instancia de :class:`LoggerAdapter`, le pasas una "
-"instancia :class:`Logger` y un objeto tipo dict que contiene tu información "
-"contextual. Cuando llamas a uno de los métodos logging en una instancia de :"
-"class:`LoggerAdapter`, este último delega la llamada a la instancia "
-"subyacente de :class:`Logger` pasada a su constructor, y se arregla para "
-"pasar la información contextual en la llamada delegada . Aquí hay un "
-"fragmento del código de :class:`LoggerAdapter`::"
+"Cuando creas una instancia de :class:`LoggerAdapter`, le pasas una instancia "
+"de :class:`Logger` y un objeto similar a un dict que contiene tu información "
+"contextual. Cuando llamas a uno de los métodos de registro en una instancia "
+"de :class:`LoggerAdapter`, delega la llamada a la instancia subyacente de :"
+"class:`Logger` pasada a su constructor, y se arregla para pasar la "
+"información contextual en la llamada delegada . Aquí hay un fragmento del "
+"código de :class:`LoggerAdapter`::"
 
 #: ../Doc/howto/logging-cookbook.rst:590
 msgid ""
@@ -699,11 +694,9 @@ msgstr ""
 msgid "you should use"
 msgstr "debería usar"
 
-# No sé cómo traducir "worker creation".
 #: ../Doc/howto/logging-cookbook.rst:968
-#, fuzzy
 msgid "and you can then replace the worker creation from this::"
-msgstr "y entonces puedes reemplazar::"
+msgstr "y luego puede reemplazar la creación del trabajador de esto::"
 
 #: ../Doc/howto/logging-cookbook.rst:979
 msgid "to this (remembering to first import :mod:`concurrent.futures`)::"
@@ -1048,7 +1041,6 @@ msgstr ""
 "gestor no reflejaría las intenciones del desarrollador de la biblioteca."
 
 #: ../Doc/howto/logging-cookbook.rst:1263
-#, fuzzy
 msgid ""
 "In Python 3.2 and later, :class:`~logging.LogRecord` creation is done "
 "through a factory, which you can specify. The factory is just a callable you "
@@ -1057,12 +1049,13 @@ msgid ""
 "signature as the :class:`~logging.LogRecord` constructor, as :class:"
 "`LogRecord` is the default setting for the factory."
 msgstr ""
-"En Python 3.2 y posterior, la creación :class:`~logging.LogRecord` se "
-"realiza a través de una fábrica, que puede especificar. La fábrica es solo "
-"un invocable que puede configurar con :func:`~logging.setLogRecordFactory`, "
-"e interrogar con :func:`~logging.getLogRecordFactory`. La fábrica se invoca "
-"con la misma firma que el constructor :class:`~logging.LogRecord`, ya que :"
-"class:`LogRecord` es la configuración predeterminada de la fábrica."
+"En Python 3.2 y posteriores, la creación de :class:`~logging.LogRecord` se "
+"realiza a través de una fábrica, que puede especificar. La fábrica es "
+"simplemente un invocable que puede configurar con :func:`~logging."
+"setLogRecordFactory`, e interrogar con :func:`~logging.getLogRecordFactory`. "
+"La fábrica se invoca con la misma firma que el constructor :class:`~logging."
+"LogRecord`, ya que :class:`LogRecord` es la configuración predeterminada de "
+"la fábrica."
 
 #: ../Doc/howto/logging-cookbook.rst:1270
 msgid ""
@@ -1229,9 +1222,7 @@ msgstr ""
 "bastante simples, pero sirven para ilustrar cómo se podrían implementar las "
 "más complejas en un escenario real de multiprocesamiento."
 
-# En algunas lineas anteriores me pasa lo mismo. No sé muy bien qué significa y cómo traducir  "listener process" y "worker processes". Separé en varias oraciones para que sea más fluida la lectura.
 #: ../Doc/howto/logging-cookbook.rst:1465
-#, fuzzy
 msgid ""
 "In the example, the main process spawns a listener process and some worker "
 "processes. Each of the main process, the listener and the workers have three "
@@ -1245,14 +1236,14 @@ msgid ""
 msgstr ""
 "En el ejemplo, el proceso principal genera un proceso de escucha y algunos "
 "procesos de trabajo. Cada uno de los procesos principales, el oyente y los "
-"de trabajo tienen tres configuraciones separadas (todos los de trabajo "
-"comparten la misma configuración). Podemos ver el logging en el proceso "
-"principal, cómo los de trabajo inician sesión en un QueueHandler y cómo el "
-"oyente implementa un QueueListener. Este último con una configuración de "
-"logging más compleja, organiza el envío de eventos recibidos a través de la "
-"cola a los gestores especificados en la configuración. Tenga en cuenta que "
-"estas configuraciones son puramente ilustrativas, pero usted debe ser capaz "
-"de adaptar este ejemplo a su propio escenario."
+"trabajadores tienen tres configuraciones separadas (todos los trabajadores "
+"comparten la misma configuración). Podemos ver el registro en el proceso "
+"principal, cómo los trabajadores se registran en un QueueHandler y cómo el "
+"oyente implementa un QueueListener y una configuración de registro más "
+"compleja, y organiza el envío de eventos recibidos a través de la cola a los "
+"controladores especificados en la configuración. Tenga en cuenta que estas "
+"configuraciones son puramente ilustrativas, pero debería poder adaptar este "
+"ejemplo a su propio escenario."
 
 #: ../Doc/howto/logging-cookbook.rst:1475
 msgid ""
@@ -1364,9 +1355,7 @@ msgstr ""
 msgid "Implementing structured logging"
 msgstr "Implementar logging estructurado"
 
-# Me quedan dudas con la frase final: "analizable por computadora"
 #: ../Doc/howto/logging-cookbook.rst:1733
-#, fuzzy
 msgid ""
 "Although most logging messages are intended for reading by humans, and thus "
 "not readily machine-parseable, there might be circumstances where you want "
@@ -1377,14 +1366,14 @@ msgid ""
 "following is a simple approach which uses JSON to serialise the event in a "
 "machine-parseable manner::"
 msgstr ""
-"Aunque la mayoría de los mensajes de logging están destinados a ser leídos "
+"Aunque la mayoría de los mensajes de registro están destinados a ser leídos "
 "por humanos y, por lo tanto, no se pueden analizar fácilmente mediante una "
 "máquina, puede haber circunstancias en las que desee generar mensajes en un "
 "formato estructurado que *sea* capaz de ser analizado por un programa (sin "
 "necesidad de expresiones regulares complejas para analizar el mensaje de "
-"log). Esto es sencillo de lograr utilizando el paquete logging. Hay varias "
-"formas de lograr esto, pero el siguiente es un enfoque simple que usa JSON "
-"para serializar el evento de una manera analizable por computadora:"
+"registro). Esto es sencillo de lograr utilizando el paquete de registro. Hay "
+"varias formas de lograr esto, pero el siguiente es un enfoque simple que usa "
+"JSON para serializar el evento de una manera analizable por máquina:"
 
 #: ../Doc/howto/logging-cookbook.rst:1757
 msgid "If the above script is run, it prints:"
