--- a/howto/regex.po
+++ b/howto/regex.po
@@ -11,16 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-10-28 22:57+0100\n"
+"PO-Revision-Date: 2021-08-04 17:34+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: \n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
-"X-Generator: Poedit 2.3.1\n"
+"X-Generator: Poedit 3.0\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: ../Doc/howto/regex.rst:5
@@ -652,7 +652,6 @@ msgid "Compiling Regular Expressions"
 msgstr "Compilando Expresiones regulares"
 
 #: ../Doc/howto/regex.rst:267
-#, fuzzy
 msgid ""
 "Regular expressions are compiled into pattern objects, which have methods "
 "for various operations such as searching for pattern matches or performing "
@@ -2640,9 +2639,8 @@ msgid "This is far more readable than::"
 msgstr "Esto es mas legible que::"
 
 #: ../Doc/howto/regex.rst:1380
-#, fuzzy
 msgid "Feedback"
-msgstr "Sus comentarios"
+msgstr "Feedback"
 
 #: ../Doc/howto/regex.rst:1382
 msgid ""
