--- a/howto/sockets.po
+++ b/howto/sockets.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-08-06 09:28-0400\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-04 20:37+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/howto/sockets.rst:5
 msgid "Socket Programming HOWTO"
@@ -607,7 +608,6 @@ msgstr ""
 "tu aplicación estará casi correcta."
 
 #: ../Doc/howto/sockets.rst:320
-#, fuzzy
 msgid ""
 "In Python, you use ``socket.setblocking(False)`` to make it non-blocking. In "
 "C, it's more complex, (for one thing, you'll need to choose between the BSD "
@@ -616,13 +616,12 @@ msgid ""
 "the exact same idea. You do this after creating the socket, but before using "
 "it. (Actually, if you're nuts, you can switch back and forth.)"
 msgstr ""
-"En python se usa ``socket.setblocking(0)`` para hacer un socket no "
-"bloqueante. En C es un poco más complejo (por una parte, tendrás que decidir "
-"entre la manera BSD de usar ``O_NONBLOCK`` y la manera casi indistinguible "
-"de Posix de ``O_NDELAY``, que es completamente diferente de "
-"``TCP_NODELAY``), pero es exactamente la misma idea. Esto se hace después de "
-"crear el socket pero antes de usarlo (Realmente, si estás loco, puedes "
-"cambiar de una manera a la otra)."
+"En Python, usa ``socket.setblocking(False)`` para que no sea bloqueante. En "
+"C, es más complejo (por un lado, deberá elegir entre el sabor BSD "
+"``O_NONBLOCK`` y el sabor POSIX casi indistinguible ``O_NDELAY``, que es "
+"completamente diferente de ``TCP_NODELAY``) , pero es exactamente la misma "
+"idea. Haz esto después de crear el socket, pero antes de usarlo. (En "
+"realidad, si estás loco, puedes cambiar de un lado a otro)."
 
 #: ../Doc/howto/sockets.rst:327
 msgid ""
