--- a/whatsnew/2.0.po
+++ b/whatsnew/2.0.po
@@ -11,19 +11,18 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-08-04 08:53+0100\n"
+"PO-Revision-Date: 2021-08-05 09:24+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: \n"
+"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
 "Language: es\n"
 "X-Generator: Poedit 3.0\n"
 
 #: ../Doc/whatsnew/2.0.rst:3
-#, fuzzy
 msgid "What's New in Python 2.0"
 msgstr "Novedades de Python 2.0"
 
@@ -32,7 +31,6 @@ msgid "Author"
 msgstr "Autor"
 
 #: ../Doc/whatsnew/2.0.rst:5
-#, fuzzy
 msgid "A.M. Kuchling and Moshe Zadka"
 msgstr "A.M. Kuchling y Moshe Zadka"
 
@@ -41,7 +39,6 @@ msgid "Introduction"
 msgstr "Introducción"
 
 #: ../Doc/whatsnew/2.0.rst:15
-#, fuzzy
 msgid ""
 "A new release of Python, version 2.0, was released on October 16, 2000. This "
 "article covers the exciting new features in 2.0, highlights some other "
@@ -54,7 +51,6 @@ msgstr ""
 "que pueden requerir reescribir el código."
 
 #: ../Doc/whatsnew/2.0.rst:20
-#, fuzzy
 msgid ""
 "Python's development never completely stops between releases, and a steady "
 "flow of bug fixes and improvements are always being submitted. A host of "
@@ -77,12 +73,10 @@ msgstr ""
 "comunicación resultante del traslado a SourceForge."
 
 #: ../Doc/whatsnew/2.0.rst:33
-#, fuzzy
 msgid "What About Python 1.6?"
 msgstr "¿Qué pasa con Python 1.6?"
 
 #: ../Doc/whatsnew/2.0.rst:35
-#, fuzzy
 msgid ""
 "Python 1.6 can be thought of as the Contractual Obligations Python release. "
 "After the core development team left CNRI in May 2000, CNRI requested that a "
@@ -104,7 +98,6 @@ msgstr ""
 "tanto, la 6 es parte de la evolución de Python, y no una rama lateral."
 
 #: ../Doc/whatsnew/2.0.rst:44
-#, fuzzy
 msgid ""
 "So, should you take much interest in Python 1.6?  Probably not.  The "
 "1.6final and 2.0beta1 releases were made on the same day (September 5, "
@@ -126,12 +119,10 @@ msgstr ""
 "hizo mucho trabajo entre mayo y septiembre."
 
 #: ../Doc/whatsnew/2.0.rst:57
-#, fuzzy
 msgid "New Development Process"
 msgstr "Nuevo proceso de desarrollo"
 
 #: ../Doc/whatsnew/2.0.rst:59
-#, fuzzy
 msgid ""
 "The most important change in Python 2.0 may not be to the code at all, but "
 "to how Python is developed: in May 2000 the Python developers began using "
@@ -151,7 +142,6 @@ msgstr ""
 "proyecto Python, situada en https://sourceforge.net/projects/python/."
 
 #: ../Doc/whatsnew/2.0.rst:66
-#, fuzzy
 msgid ""
 "The most important of the services now hosted at SourceForge is the Python "
 "CVS tree, the version-controlled repository containing the source code for "
@@ -191,7 +181,6 @@ msgstr ""
 "realizado."
 
 #: ../Doc/whatsnew/2.0.rst:83
-#, fuzzy
 msgid ""
 "The shift to using SourceForge's services has resulted in a remarkable "
 "increase in the speed of development.  Patches now get submitted, commented "
@@ -220,7 +209,6 @@ msgstr ""
 "raspador de pantalla HTML que envía mensajes más útiles."
 
 #: ../Doc/whatsnew/2.0.rst:95
-#, fuzzy
 msgid ""
 "The ease of adding code caused a few initial growing pains, such as code was "
 "checked in before it was ready or without getting clear agreement from the "
@@ -249,7 +237,6 @@ msgstr ""
 "la comunidad no esté de acuerdo con él."
 
 #: ../Doc/whatsnew/2.0.rst:106
-#, fuzzy
 msgid ""
 "Producing an actual patch is the last step in adding a new feature, and is "
 "usually easy compared to the earlier task of coming up with a good design. "
@@ -275,7 +262,6 @@ msgstr ""
 "la introducción de :pep:`1`, \"PEP Purpose and Guidelines\":"
 
 #: ../Doc/whatsnew/2.0.rst:120
-#, fuzzy
 msgid ""
 "PEP stands for Python Enhancement Proposal.  A PEP is a design document "
 "providing information to the Python community, or describing a new feature "
@@ -289,7 +275,6 @@ msgstr ""
 "la misma."
 
 #: ../Doc/whatsnew/2.0.rst:125
-#, fuzzy
 msgid ""
 "We intend PEPs to be the primary mechanisms for proposing new features, for "
 "collecting community input on an issue, and for documenting the design "
@@ -303,7 +288,6 @@ msgstr ""
 "comunidad y de documentar las opiniones discrepantes."
 
 #: ../Doc/whatsnew/2.0.rst:130
-#, fuzzy
 msgid ""
 "Read the rest of :pep:`1` for the details of the PEP editorial process, "
 "style, and format.  PEPs are kept in the Python CVS tree on SourceForge, "
@@ -320,12 +304,10 @@ msgstr ""
 "\"Lockstep Iteration\", hasta PEP 225, \"Elementwise/Objectwise Operators\"."
 
 #: ../Doc/whatsnew/2.0.rst:141
-#, fuzzy
 msgid "Unicode"
 msgstr "Unicode"
 
 #: ../Doc/whatsnew/2.0.rst:143
-#, fuzzy
 msgid ""
 "The largest new feature in Python 2.0 is a new fundamental data type: "
 "Unicode strings.  Unicode uses 16-bit numbers to represent characters "
@@ -338,7 +320,6 @@ msgstr ""
 "se pueden admitir 65.536 caracteres distintos."
 
 #: ../Doc/whatsnew/2.0.rst:148
-#, fuzzy
 msgid ""
 "The final interface for Unicode support was arrived at through countless "
 "often-stormy discussions on the python-dev mailing list, and mostly "
@@ -356,7 +337,6 @@ msgstr ""
 "los puntos más significativos de las interfaces Unicode."
 
 #: ../Doc/whatsnew/2.0.rst:155
-#, fuzzy
 msgid ""
 "In Python source code, Unicode strings are written as ``u\"string\"``.  "
 "Arbitrary Unicode characters can be written using a new escape sequence, ``"
@@ -372,7 +352,6 @@ msgstr ""
 "escapes octales para caracteres hasta U+01FF, que se representa con ``777``."
 
 #: ../Doc/whatsnew/2.0.rst:161
-#, fuzzy
 msgid ""
 "Unicode strings, just like regular strings, are an immutable sequence type. "
 "They can be indexed and sliced, but not modified in place. Unicode strings "
@@ -399,17 +378,15 @@ msgstr ""
 "py`."
 
 #: ../Doc/whatsnew/2.0.rst:172
-#, fuzzy
 msgid ""
 "Combining 8-bit and Unicode strings always coerces to Unicode, using the "
 "default ASCII encoding; the result of ``'a' + u'bc'`` is ``u'abc'``."
 msgstr ""
-"La combinación de cadenas de 8 bits y Unicode siempre coacciona a Unicode, "
-"utilizando la codificación ASCII por defecto; el resultado de ``'a' + "
-"u'bc'`` es ``u'abc'``."
+"La combinación de cadenas de 8 bits y Unicode siempre fuerza conversión a "
+"Unicode, utilizando la codificación ASCII por defecto; el resultado de ``'a' "
+"+ u'bc'`` es ``u'abc'``."
 
 #: ../Doc/whatsnew/2.0.rst:175
-#, fuzzy
 msgid ""
 "New built-in functions have been added, and existing built-ins modified to "
 "support Unicode:"
@@ -418,7 +395,6 @@ msgstr ""
 "existentes para que sean compatibles con Unicode:"
 
 #: ../Doc/whatsnew/2.0.rst:178
-#, fuzzy
 msgid ""
 "``unichr(ch)`` returns a Unicode string 1 character long, containing the "
 "character *ch*."
@@ -427,7 +403,6 @@ msgstr ""
 "carácter *ch*."
 
 #: ../Doc/whatsnew/2.0.rst:181
-#, fuzzy
 msgid ""
 "``ord(u)``, where *u* is a 1-character regular or Unicode string, returns "
 "the number of the character as an integer."
@@ -1834,7 +1809,6 @@ msgstr ""
 "Python*, que se une al conjunto básico de documentación de Python."
 
 #: ../Doc/whatsnew/2.0.rst:880
-#, fuzzy
 msgid "XML Modules"
 msgstr "Módulos XML"
 
@@ -2239,7 +2213,6 @@ msgstr ""
 "del nuevo soporte de Unicode."
 
 #: ../Doc/whatsnew/2.0.rst:1089
-#, fuzzy
 msgid ""
 ":mod:`filecmp`: Supersedes the old :mod:`cmp`, :mod:`cmpcache` and :mod:"
 "`dircmp` modules, which have now become deprecated. (Contributed by Gordon "
@@ -2487,12 +2460,10 @@ msgstr ""
 "módulo (:kbd:`F5`) y Ejecutar script (:kbd:`Ctrl-F5`)."
 
 #: ../Doc/whatsnew/2.0.rst:1184
-#, fuzzy
 msgid "Deleted and Deprecated Modules"
 msgstr "Módulos eliminados y obsoletos"
 
 #: ../Doc/whatsnew/2.0.rst:1186
-#, fuzzy
 msgid ""
 "A few modules have been dropped because they're obsolete, or because there "
 "are now better ways to do the same thing.  The :mod:`stdwin` module is gone; "
@@ -2505,7 +2476,6 @@ msgstr ""
 "plataforma que ya no se desarrolla."
 
 #: ../Doc/whatsnew/2.0.rst:1190
-#, fuzzy
 msgid ""
 "A number of modules have been moved to the :file:`lib-old` subdirectory: :"
 "mod:`cmp`, :mod:`cmpcache`, :mod:`dircmp`, :mod:`dump`,  :mod:`find`, :mod:"
@@ -2523,12 +2493,10 @@ msgstr ""
 "estos módulos."
 
 #: ../Doc/whatsnew/2.0.rst:1199
-#, fuzzy
 msgid "Acknowledgements"
 msgstr "Agradecimientos"
 
 #: ../Doc/whatsnew/2.0.rst:1201
-#, fuzzy
 msgid ""
 "The authors would like to thank the following people for offering "
 "suggestions on various drafts of this article: David Bolen, Mark Hammond, "
