--- a/copyright.po
+++ b/copyright.po
@@ -38,7 +38,7 @@ msgstr ""
 
 #: ../Doc/copyright.rst:9
 msgid "Copyright © 2000 BeOpen.com. All rights reserved."
-msgstr "Copyright © 2000 BeOpen.com. Todos los derechos reservados."
+msgstr "Derechos de autor © 2000 BeOpen.com. Todos los derechos reservados."
 
 #: ../Doc/copyright.rst:11
 msgid ""
