Apply suggestions from code review
Co-authored-by: iamagf <61362029+iam-agf@users.noreply.github.com>

--- a/copyright.po
+++ b/copyright.po
@@ -33,7 +33,7 @@ msgstr "Python y esta documentación es:"
 #: ../Doc/copyright.rst:7
 msgid "Copyright © 2001-2021 Python Software Foundation. All rights reserved."
 msgstr ""
-"Copyright © 2001-2021 Python Software Foundation. Todos los derechos "
+"Derechos de autor © 2001-2021 Python Software Foundation. Todos los derechos "
 "reservados."
 
 #: ../Doc/copyright.rst:9
@@ -45,14 +45,14 @@ msgid ""
 "Copyright © 1995-2000 Corporation for National Research Initiatives. All "
 "rights reserved."
 msgstr ""
-"Copyright © 1995-2000 Corporation for National Research Initiatives. Todos "
+"Derechos de autor © 1995-2000 Corporation for National Research Initiatives. Todos "
 "los derechos reservados."
 
 #: ../Doc/copyright.rst:14
 msgid ""
 "Copyright © 1991-1995 Stichting Mathematisch Centrum. All rights reserved."
 msgstr ""
-"Copyright © 1991-1995 Stichting Mathematisch Centrum.  Todos los derechos "
+"Derechos de autor © 1991-1995 Stichting Mathematisch Centrum.  Todos los derechos "
 "reservados."
 
 #: ../Doc/copyright.rst:18
