Apply suggestions from code review
Co-authored-by: narvmtz <51009725+narvmtz@users.noreply.github.com>

--- a/c-api/arg.po
+++ b/c-api/arg.po
@@ -357,7 +357,7 @@ msgid ""
 msgstr ""
 "Requiere que el objeto Python es un objeto :class:`bytearray`, sin intentar "
 "ninguna conversión. Lanza  :exc:`TypeError` si el objeto no es un objecto :"
-"class:`bytearray`. La variable C también puede ser declarado como :c:type:"
+"class:`bytearray`. La variable C también puede ser declarada como :c:type:"
 "`PyObject*`."
 
 #: ../Doc/c-api/arg.rst:156
@@ -862,7 +862,7 @@ msgid ""
 "*address* unmodified."
 msgstr ""
 "donde *object* es el objeto de Python a convertir y *address* es el "
-"argumento :c:type:`void*` que se pasó a la función :c:func:`PyArg_Parse*`. "
+"argumento :c:type:`void*` que se pasó a la función :c:func:`PyArg_Parse\\*`. "
 "El *status* retornado debe ser ``1`` para una conversión exitosa y ``0`` si "
 "la conversión ha fallado. Cuando la conversión falla, la función *converter* "
 "debería generar una excepción y dejar el contenido de *address* sin "
