--- a/c-api/buffer.po
+++ b/c-api/buffer.po
@@ -780,8 +780,8 @@ msgid ""
 msgstr ""
 "Envía una solicitud al *exporter* para completar la *view* según lo "
 "especificado por *flags*. Si el exportador no puede proporcionar un búfer "
-"del tipo exacto, DEBE lanzar :c:data:`PyExc_BufferError`, establece ``view-"
-">obj`` en ``NULL`` y retorna ``-1``."
+"del tipo exacto, DEBE lanzar :c:data:`PyExc_BufferError`, establecer ``view-"
+">obj`` en ``NULL`` y retornar ``-1``."
 
 #: ../Doc/c-api/buffer.rst:444
 msgid ""
