--- a/c-api/complex.po
+++ b/c-api/complex.po
@@ -154,7 +154,7 @@ msgid ""
 "Return true if its argument is a :c:type:`PyComplexObject` or a subtype of :"
 "c:type:`PyComplexObject`.  This function always succeeds."
 msgstr ""
-"Retorna verdadero si su argumento es a :c:type:`PyComplexObject` o un "
+"Retorna verdadero si su argumento es un :c:type:`PyComplexObject` o un "
 "subtipo de :c:type:`PyComplexObject`. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/complex.rst:102
