--- a/c-api/dict.po
+++ b/c-api/dict.po
@@ -251,8 +251,8 @@ msgstr ""
 "`Py_ssize_t` al que se refiere *ppos* debe inicializarse a ``0`` antes de la "
 "primera llamada a esta función para iniciar la iteración; la función retorna "
 "verdadero para cada par en el diccionario y falso una vez que todos los "
-"pares han sido reportados. Los parámetros *pkey* y *pvalue* deben apuntar a :"
-"c:type:`PyObject\\*` variables que se completarán con cada clave y valor, "
+"pares han sido reportados. Los parámetros *pkey* y *pvalue* deben apuntar a "
+"variables :c:type:`PyObject*` que se completarán con cada clave y valor, "
 "respectivamente, o pueden ser ``NULL``. Todas las referencias devueltas a "
 "través de ellos se toman prestadas. *ppos* no debe modificarse durante la "
 "iteración. Su valor representa compensaciones dentro de la estructura del "
