--- a/c-api/init.po
+++ b/c-api/init.po
@@ -1411,7 +1411,7 @@ msgid ""
 "points to this thread's interpreter state."
 msgstr ""
 "Esta estructura de datos representa el estado de un solo hilo. El único "
-"miembro de datos públicos es ::attr:`interp` (:c:type:`PyInterpreterState "
+"miembro de datos públicos es :attr:`interp` (:c:type:`PyInterpreterState "
 "*`), que apunta al estado del intérprete de este hilo."
 
 #: ../Doc/c-api/init.rst:845
@@ -1807,16 +1807,16 @@ msgstr "*tstate* no debe ser ``NULL``."
 msgid ""
 "Get the unique thread state identifier of the Python thread state *tstate*."
 msgstr ""
-"Obtiene el identificador de estado de subproceso único del estado de "
-"subproceso de Python *tstate*."
+"Obtiene el identificador de estado de subproceso único del estado del "
+"hilo de Python *tstate*."
 
 #: ../Doc/c-api/init.rst:1100
 msgid "Get the interpreter of the Python thread state *tstate*."
-msgstr "Obtiene el intérprete del estado del subproceso de Python *tstate*."
+msgstr "Obtiene el intérprete del estado del hilo de Python *tstate*."
 
 #: ../Doc/c-api/init.rst:1109
 msgid "Get the current interpreter."
-msgstr "Consigue el intérprete actual."
+msgstr "Obtiene el intérprete actual."
 
 #: ../Doc/c-api/init.rst:1111
 msgid ""
@@ -1884,7 +1884,7 @@ msgstr ""
 
 #: ../Doc/c-api/init.rst:1160
 msgid "Set the frame evaluation function."
-msgstr "Configure la función de evaluación del marco."
+msgstr "Configura la función de evaluación del marco."
 
 #: ../Doc/c-api/init.rst:1169
 msgid ""
@@ -2317,7 +2317,7 @@ msgid ""
 "Otherwise, the function *func* can be scheduled to be called from the wrong "
 "interpreter."
 msgstr ""
-"Para llamar a esta función en un subinterpretador, la persona que llama debe "
+"Para llamar a esta función en un subinterprete, la persona que llama debe "
 "mantener el GIL. De lo contrario, la función *func* se puede programar para "
 "que se llame desde el intérprete incorrecto."
 
@@ -2344,9 +2344,9 @@ msgid ""
 "from the main interpreter. Each subinterpreter now has its own list of "
 "scheduled calls."
 msgstr ""
-"Si esta función se llama en un subinterpretador, la función *func* ahora "
-"está programada para ser llamada desde el subinterpretador, en lugar de ser "
-"llamada desde el intérprete principal. Cada subinterpretador ahora tiene su "
+"Si esta función se llama en un subinterprete, la función *func* ahora "
+"está programada para ser llamada desde el subinterprete, en lugar de ser "
+"llamada desde el intérprete principal. Cada subinterprete ahora tiene su "
 "propia lista de llamadas programadas."
 
 #: ../Doc/c-api/init.rst:1440
