--- a/c-api/memory.po
+++ b/c-api/memory.po
@@ -415,7 +415,7 @@ msgid ""
 "event of failure."
 msgstr ""
 "Igual que :c:func:`PyMem_Realloc`, pero el bloque de memoria cambia de "
-"tamaño a ``(n * sizeof(TYPE))`` bytes. retorna una conversión de puntero a :"
+"tamaño a ``(n * sizeof(TYPE))`` bytes. Retorna una conversión de puntero a :"
 "c:type:`TYPE*`. Al retornar, *p* será un puntero a la nueva área de memoria, "
 "o ``NULL`` en caso de falla."
 
