--- a/c-api/reflection.po
+++ b/c-api/reflection.po
@@ -65,7 +65,7 @@ msgstr "Vea también :c:func:`PyThreadState_GetFrame`."
 
 #: ../Doc/c-api/reflection.rst:36
 msgid "Get the *frame* next outer frame."
-msgstr "Obtenga el *frame* siguiente marco (*frame*) exterior."
+msgstr "Obtiene el *frame* siguiente marco (*frame*) exterior."
 
 #: ../Doc/c-api/reflection.rst:38
 msgid "Return a strong reference, or ``NULL`` if *frame* has no outer frame."
@@ -79,7 +79,7 @@ msgstr "*frame* no debe ser ``NULL``."
 
 #: ../Doc/c-api/reflection.rst:47
 msgid "Get the *frame* code."
-msgstr "Obtén el código *frame*."
+msgstr "Obtiene el código *frame*."
 
 #: ../Doc/c-api/reflection.rst:49
 msgid "Return a strong reference."
