--- a/c-api/unicode.po
+++ b/c-api/unicode.po
@@ -96,7 +96,7 @@ msgid ""
 "APIs. All Unicode objects will be \"canonical\" since then. See :pep:`623` "
 "for more information."
 msgstr ""
-"El objeto Unicode \"heredado\" se eliminará en Python 3.12 con API "
+"El objeto Unicode \"heredado\" se eliminará en Python 3.12 con APIs "
 "obsoletas. Todos los objetos Unicode serán \"canónicos\" desde entonces. "
 "Consulte :pep:`623` para obtener más información."
 
@@ -1189,7 +1189,7 @@ msgid ""
 msgstr ""
 "Parte del estilo antiguo de la API Unicode, por favor migrar para usar :c:"
 "func:`PyUnicode_AsUCS4`, :c:func:`PyUnicode_AsWideChar`, :c:func:"
-"`PyUnicode_ReadChar` o API nuevas similares."
+"`PyUnicode_ReadChar` o APIs nuevas similares."
 
 #: ../Doc/c-api/unicode.rst:726
 msgid ""
@@ -1207,7 +1207,7 @@ msgid ""
 "func:`Py_UNICODE_TODECIMAL`."
 msgstr ""
 "Parte del estilo antiguo de la API :c:type:`Py_UNICODE`; por favor migrar "
-"para usar :c:func:`PyUnicode_AsEncodedString`."
+"para usar :c:func:`Py_UNICODE_TODECIMAL`."
 
 #: ../Doc/c-api/unicode.rst:737
 msgid ""
