--- a/c-api/weakref.po
+++ b/c-api/weakref.po
@@ -44,20 +44,20 @@ msgid ""
 "Return true if *ob* is either a reference or proxy object.  This function "
 "always succeeds."
 msgstr ""
-"Retorna verdad (true) si *ob* es una referencia o un objeto proxy. Esta "
+"Retorna verdadero (true) si *ob* es una referencia o un objeto proxy. Esta "
 "función siempre tiene éxito."
 
 #: ../Doc/c-api/weakref.rst:22
 msgid ""
 "Return true if *ob* is a reference object.  This function always succeeds."
 msgstr ""
-"Retorna verdad (true) si *ob* es un objeto de referencia. Esta función "
+"Retorna verdadero (true) si *ob* es un objeto de referencia. Esta función "
 "siempre tiene éxito."
 
 #: ../Doc/c-api/weakref.rst:27
 msgid "Return true if *ob* is a proxy object.  This function always succeeds."
 msgstr ""
-"Retorna verdad (true) si *ob* es un objeto proxy.Esta función siempre tiene "
+"Retorna verdadero (true) si *ob* es un objeto proxy. Esta función siempre tiene "
 "éxito."
 
 #: ../Doc/c-api/weakref.rst:32
