--- a/c-api/structures.po
+++ b/c-api/structures.po
@@ -399,11 +399,11 @@ msgid ""
 "keyword arguments are stored in the *args* array, after the positional "
 "arguments."
 msgstr ""
-"Extensión de :const:`METH_FASTCALL` que apoya también argumentos de palabra "
+"Extensión de :const:`METH_FASTCALL` que admite también argumentos de palabra "
 "clave, con los métodos de tipo :c:type:`_PyCFunctionFastWithKeywords`. "
 "argumentos de palabra clave se transmiten de la misma manera como en el  :"
-"ref:`vectorcall protocol <vectorcall>`: hay un adicional cuarta :c:type:"
-"`PyObject*` parámetro que es una tupla que representa los nombres de los "
+"ref:`vectorcall protocol <vectorcall>`: hay un cuarto parámetro :c:type:"
+"`PyObject*` adicional que es una tupla que representa los nombres de los "
 "argumentos de palabra clave o posiblemente ``NULL`` si no hay palabras "
 "clave. Los valores de los argumentos de palabras clave se almacenan en el "
 "arreglo *args*, después de los argumentos posicionales."
@@ -760,7 +760,7 @@ msgstr ""
 "``__vectorcalloffset__``, correspondientes a :c:member:`~PyTypeObject."
 "tp_dictoffset`, :c:member:`~PyTypeObject.tp_weaklistoffset` y :c:member:"
 "`~PyTypeObject.tp_vectorcall_offset` en objetos de tipo. Estos deben "
-"definirse con ``T_PYSSIZET`` y ``READONLY``, por ejemplo:"
+"definirse con ``T_PYSSIZET`` y ``READONLY``, por ejemplo::"
 
 #: ../Doc/c-api/structures.rst:441
 msgid ""
@@ -776,7 +776,7 @@ msgstr "nombre"
 
 #: ../Doc/c-api/structures.rst:447
 msgid "attribute name"
-msgstr "nombre del atributo"
+msgstr "Nombre del atributo"
 
 #: ../Doc/c-api/structures.rst:449
 msgid "get"
