--- a/c-api/init.po
+++ b/c-api/init.po
@@ -1807,8 +1807,8 @@ msgstr "*tstate* no debe ser ``NULL``."
 msgid ""
 "Get the unique thread state identifier of the Python thread state *tstate*."
 msgstr ""
-"Obtiene el identificador de estado de subproceso único del estado del "
-"hilo de Python *tstate*."
+"Obtiene el identificador de estado de subproceso único del estado del hilo "
+"de Python *tstate*."
 
 #: ../Doc/c-api/init.rst:1100
 msgid "Get the interpreter of the Python thread state *tstate*."
@@ -2344,10 +2344,10 @@ msgid ""
 "from the main interpreter. Each subinterpreter now has its own list of "
 "scheduled calls."
 msgstr ""
-"Si esta función se llama en un subinterprete, la función *func* ahora "
-"está programada para ser llamada desde el subinterprete, en lugar de ser "
-"llamada desde el intérprete principal. Cada subinterprete ahora tiene su "
-"propia lista de llamadas programadas."
+"Si esta función se llama en un subinterprete, la función *func* ahora está "
+"programada para ser llamada desde el subinterprete, en lugar de ser llamada "
+"desde el intérprete principal. Cada subinterprete ahora tiene su propia "
+"lista de llamadas programadas."
 
 #: ../Doc/c-api/init.rst:1440
 msgid "Profiling and Tracing"
