--- a/c-api/weakref.po
+++ b/c-api/weakref.po
@@ -57,8 +57,8 @@ msgstr ""
 #: ../Doc/c-api/weakref.rst:27
 msgid "Return true if *ob* is a proxy object.  This function always succeeds."
 msgstr ""
-"Retorna verdadero (true) si *ob* es un objeto proxy. Esta función siempre tiene "
-"éxito."
+"Retorna verdadero (true) si *ob* es un objeto proxy. Esta función siempre "
+"tiene éxito."
 
 #: ../Doc/c-api/weakref.rst:32
 msgid ""
