--- a/c-api/init_config.po
+++ b/c-api/init_config.po
@@ -797,7 +797,8 @@ msgstr ""
 #: ../Doc/c-api/init_config.rst:478
 msgid "If non-zero, enable the :ref:`Python Development Mode <devmode>`."
 msgstr ""
-"Si es distinto de cero, habilita :ref:`Modo de desarrollo de Python <devmode>`."
+"Si es distinto de cero, habilita :ref:`Modo de desarrollo de Python "
+"<devmode>`."
 
 #: ../Doc/c-api/init_config.rst:482
 msgid "If non-zero, dump all objects which are still alive at exit."
@@ -1628,8 +1629,8 @@ msgid ""
 ":c:member:`PyConfig._isolated_interpreter`: if non-zero, disallow threads, "
 "subprocesses and fork."
 msgstr ""
-":c:member:`PyConfig._isolated_interpreter`: si no es cero, no permite "
-"hilos, subprocesos y bifurcaciones."
+":c:member:`PyConfig._isolated_interpreter`: si no es cero, no permite hilos, "
+"subprocesos y bifurcaciones."
 
 #: ../Doc/c-api/init_config.rst:1030
 msgid ""
