--- a/glossary.po
+++ b/glossary.po
@@ -718,7 +718,7 @@ msgid ""
 "the :ref:`Descriptor How To Guide <descriptorhowto>`."
 msgstr ""
 "Para obtener más información sobre los métodos de los descriptores, "
-"consulte :ref:`descriptors` o :ref:`Descriptor How To Guide "
+"consulte :ref:`descriptors` o :ref:`Guía práctica de uso de los descriptores"
 "<descriptorhowto>`."
 
 #: ../Doc/glossary.rst:306
