Agregando palabras faltante

--- a/c-api/reflection.po
+++ b/c-api/reflection.po
@@ -89,7 +89,7 @@ msgstr "Retorna una referencia fuerte."
 msgid ""
 "*frame* must not be ``NULL``. The result (frame code) cannot be ``NULL``."
 msgstr ""
-"*frame* no debe ser ``NULL``. El resultado (código frame) no puede ser "
+"*frame* no debe ser ``NULL``. El resultado (código del marco) no puede ser "
 "``NULL``."
 
 #: ../Doc/c-api/reflection.rst:58
