Traduciendo entradas pendientes en howto/

--- a/howto/logging.po
+++ b/howto/logging.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2021-08-04 17:38+0200\n"
+"PO-Revision-Date: 2021-08-12 20:29+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_US\n"
 "Language-Team: python-doc-es\n"
@@ -305,6 +305,12 @@ msgid ""
 "passed, which determines how encoding errors are handled. For available "
 "values and the default, see the documentation for :func:`open`."
 msgstr ""
+"Se agregó el argumento *encoding*. En versiones anteriores de Python, o si "
+"no se especifica, la codificación utilizada es el valor predeterminado "
+"utilizado por :func:`open`. Aunque no se muestra en el ejemplo anterior, "
+"ahora también se puede pasar un argumento *errors*, que determina cómo se "
+"manejan los errores de codificación. Para conocer los valores disponibles y "
+"los predeterminados, consulte la documentación de :func:`open`."
 
 #: ../Doc/howto/logging.rst:144
 msgid ""
