--- a/howto/pyporting.po
+++ b/howto/pyporting.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2021-08-04 17:37+0200\n"
+"PO-Revision-Date: 2021-08-12 20:30+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
@@ -155,6 +155,10 @@ msgid ""
 "is the one installed for the Python currently in use, whether it be a system-"
 "wide ``pip`` or one installed within a :ref:`virtual environment <tut-venv>`."
 msgstr ""
+"Nota: El uso de ``python -m pip install`` garantiza que el ``pip`` que "
+"invoca es el que está instalado para el Python actualmente en uso, ya sea un "
+"``pip`` de todo el sistema o uno instalado dentro de un :ref:`entorno "
+"virtual <tut-venv>`."
 
 #: ../Doc/howto/pyporting.rst:56
 msgid "Details"
